# qt-projects

./: CMakeLists.txt  main.cpp  projecthub.cpp  projecthub.h  resources.qrc
src/: main.cpp
src/chess/: chess.cpp  chess.h
src/project_hub/: projecthub.cpp  projecthub.h
tests/: test_board.cpp
